# plugin-samples

./: CMakeLists.txt  README.md
Extension/: CMakeLists.txt  Extension.cpp  Extension.h  SampleExtension.configext
Rotate/: CMakeLists.txt  CShPluginRotate.cpp  CShPluginRotate.h
Translate/: CMakeLists.txt  CShPluginTranslate.cpp  CShPluginTranslate.h
cmake/Modules/: FindPkgMacros.cmake
